--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="This is the assignment portal for Kevin Allred in WDD230 Winter 2023"
     />
     <title>Kevin Allred WDD230 Assignment Portal</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/index.css" />
     <script src="./scripts/site.js" defer></script>
   </head>
