--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="selfieframe">
               <img
                 class="selfie"
-                src="./images/Kevin Delicate Arch .jpg"
+                src="./images/Kevin-Delicate-Arch.jpg"
                 alt="Selfie of Kevin in front of Delicate Arch"
               />
             </div>
@@ -39,12 +39,12 @@
           </div>
         </section>
         <section id="assignmentPortal" class="parallax-section">
-          <main class="panel">
+          <div class="panel">
             <h2>Assignment Portal</h2>
             <ul>
               <li>No assignments yet</li>
             </ul>
-          </main>
+          </div>
         </section>
         <footer id="footerSection" class="panel">
           <p>
