--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Kevin Allred WDD230 Assignment Portal</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/medium.css" />
     <script src="./scripts/site.js" defer></script>
   </head>
   <body>
