fix img alt tags

--- a/designConcepts/index.html
+++ b/designConcepts/index.html
@@ -43,7 +43,7 @@
           user of a store shelf where they would by things off of,
         </p>
       </div>
-      <img src="./images/Amazon.jpg" alt="Adidas Home Page" />
+      <img src="./images/Amazon.jpg" alt="Amazon Home Page" />
     </div>
     <div class="panel" id="c">
       <div class="panelHeading">
@@ -55,7 +55,7 @@
           see first.
         </p>
       </div>
-      <img src="./images/google.jpg" alt="Adidas Home Page" />
+      <img src="./images/google.jpg" alt="Google Home Page" />
     </div>
   </body>
 </html>
