--- a/designConcepts/index.html
+++ b/designConcepts/index.html
@@ -26,6 +26,7 @@
     <div class="panel" id="a">
       <div class="panelHeading">
         <h2>Adidas: Color</h2>
+        <a href="https://www.adidas.com/us">https://www.adidas.com/us</a>
         <p>
           Adidas used color theory very well when the color of the girls pants
           in the image was the same as the color of the sale notification bar.
@@ -36,6 +37,7 @@
     <div class="panel" id="b">
       <div class="panelHeading">
         <h2>Amazon: Consistency</h2>
+        <a href="https://www.amazon.com/">https://www.amazon.com/</a>
         <p>
           Amazon applied consistency very well in their design by having all
           their products neatly lined up along the browser page. This helps them
@@ -48,6 +50,7 @@
     <div class="panel" id="c">
       <div class="panelHeading">
         <h2>Google: Visual Alignment</h2>
+        <a href="https://www.google.com/">https://www.google.com/</a>
         <p>
           The visual alignment of Google is incredibly effective as it points
           all of the users attention to the search bar in the center. Everything
