Add link in main page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="panel">
             <h2>Assignment Portal</h2>
             <ul>
-              <li>No assignments yet</li>
+              <li><a href="./designConcepts/index.html">Design Concepts</a></li>
             </ul>
           </div>
         </section>
