Add link to homepage

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <h2>Assignment Portal</h2>
             <ul>
               <li><a href="./designConcepts/index.html">Design Concepts</a></li>
+              <li>
+                <a href="./lesson3/index.html">Website Planning Document</a>
+              </li>
             </ul>
           </div>
         </section>
