add chamber page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
               <li>
                 <a href="./lesson3/index.html">Website Planning Document</a>
               </li>
+              <li>
+                <a href="./chamber/index.html">Chamber Home Page</a>
+              </li>
             </ul>
           </div>
         </section>
