BOM activity done

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,15 +46,13 @@
       </nav>
     </header>
     <main>
-      <section class="panel" id="hero">
-        <p>Hero</p>
-      </section>
-      <section class="panel" id="event"><p>event</p></section>
+      <section class="panel" id="hero"><p>hero</p></section>
+      <section class="panel" id="event"><p>events</p></section>
       <section class="panel" id="weather"><p>weather</p></section>
       <section class="panel" id="news"><p>news</p></section>
       <section class="panel" id="spotlight">
-        <div class="panel"></div>
-        <div class="panel"></div>
+        <div class="panel"><p>spotlight 1</p></div>
+        <div class="panel"><p>spotlight 2</p></div>
       </section>
     </main>
     <footer>
