--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,13 +46,30 @@
       </nav>
     </header>
     <main>
-      <section class="panel" id="hero"><p>hero</p></section>
-      <section class="panel" id="event"><p>events</p></section>
-      <section class="panel" id="weather"><p>weather</p></section>
-      <section class="panel" id="news"><p>news</p></section>
+      <section class="panel" id="hero">
+        <img
+          src="https://images.pexels.com/photos/2649403/pexels-photo-2649403.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+          alt="lake with mountains behind"
+        />
+      </section>
+      <section class="panel" id="event">
+        <img
+          src="https://images.pexels.com/photos/325521/pexels-photo-325521.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+          alt="people sitting on lawn"
+        />
+        <h3>Events!</h3>
+        <p>
+          Here in Rexburg there is a variety of events and activities. Click
+          here to learn more!
+        </p>
+      </section>
+      <section class="panel" id="weather">
+        <img src="./images/weather.png" alt="weather report" />
+      </section>
+      <section class="panel" id="news"><h2>news</h2></section>
       <section class="panel" id="spotlight">
-        <div class="panel"><p>spotlight 1</p></div>
-        <div class="panel"><p>spotlight 2</p></div>
+        <div class="panel"><h2>spotlight 1</h2></div>
+        <div class="panel"><h2>spotlight 2</h2></div>
       </section>
     </main>
     <footer>
