--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
               <li>
                 <a href="./chamber/index.html">Chamber Home Page</a>
               </li>
+              <li>
+                <a href="./lesson7/lazyload.html">Lazy Load Example</a>
+              </li>
             </ul>
           </div>
         </section>
