--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,6 +51,10 @@
           src="https://images.pexels.com/photos/2649403/pexels-photo-2649403.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
           alt="lake with mountains behind"
         />
+        <div class="call">
+          <h1>Come visit Rexburg</h1>
+          <button>Learn More</button>
+        </div>
       </section>
       <section class="panel" id="event">
         <img
@@ -66,11 +70,40 @@
       <section class="panel" id="weather">
         <img src="./images/weather.png" alt="weather report" />
       </section>
-      <section class="panel" id="news"><h2>news</h2></section>
-      <section class="panel" id="spotlight">
-        <div class="panel"><h2>spotlight 1</h2></div>
-        <div class="panel"><h2>spotlight 2</h2></div>
+      <section class="panel" id="news">
+        <ul>
+          <li>Ribbon Cutting Ceremony!</li>
+          <li>New Library!</li>
+          <li>Car Theft Rampant!</li>
+          <li>Water Restrictions Increased</li>
+          <li>Puppet Becomes Real Boy!</li>
+        </ul>
       </section>
+      <section class="panel" id="spotlight">
+        <div class="panel">
+          <img
+            src="https://images.pexels.com/photos/260447/pexels-photo-260447.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+            alt="gym"
+          />
+          <h3>New gym opens in Rexburg</h3>
+          <p>Buff Guys Gym 2nd S 1st W</p>
+        </div>
+        <div class="panel">
+          <img
+            src="https://images.pexels.com/photos/260447/pexels-photo-260447.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+            alt="gym"
+          />
+          <h3>New gym opens in Rexburg</h3>
+          <p>Buff Guys Gym 2nd S 1st W</p>
+        </div>
+        <div class="panel">
+          <img
+            src="https://images.pexels.com/photos/2253643/pexels-photo-2253643.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+            alt="restaurant"
+          />
+        </div>
+      </section>
+      <section id="join"><div class="panel">Join!</div></section>
     </main>
     <footer>
       <img src="./images/RexCC-removebg-preview.png" alt="logo" class="icon" />
