--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <header>
+      <div class="banner hidden" id="meet-greet">
+        🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.
+      </div>
       <div class="header-box">
         <img
           src="./images/RexCC-removebg-preview.png"
@@ -71,6 +74,7 @@
         <img src="./images/weather.png" alt="weather report" />
       </section>
       <section class="panel" id="news">
+        <h2>News:</h2>
         <ul>
           <li>Ribbon Cutting Ceremony!</li>
           <li>New Library!</li>
@@ -90,20 +94,28 @@
         </div>
         <div class="panel">
           <img
-            src="https://images.pexels.com/photos/260447/pexels-photo-260447.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+            src="https://images.pexels.com/photos/947173/pexels-photo-947173.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
             alt="gym"
           />
-          <h3>New gym opens in Rexburg</h3>
-          <p>Buff Guys Gym 2nd S 1st W</p>
+          <h3>Cupcake Shop Opens!</h3>
+          <p>25 S 4th W</p>
         </div>
         <div class="panel">
           <img
             src="https://images.pexels.com/photos/2253643/pexels-photo-2253643.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
             alt="restaurant"
           />
+          <h3>Cafe open till dinner!</h3>
+          <p>45 S 7th W</p>
         </div>
       </section>
-      <section id="join"><div class="panel">Join!</div></section>
+      <section id="join">
+        <div class="panel">
+          <img src="https://picsum.photos/id/277/200/" alt="grassy field" />
+          <h3>Join the Chamber!</h3>
+          <button>Learn more</button>
+        </div>
+      </section>
     </main>
     <footer>
       <img src="./images/RexCC-removebg-preview.png" alt="logo" class="icon" />
@@ -111,6 +123,7 @@
       <p>&copy; <span id="copyyear"></span> | Kevin Allred | Rexburg, ID|</p>
       <a href="https://goo.gl/maps/f5VcGpbPFv3w4bsv8">Maps</a>
       <p>Last updated: <span id="lastmodified"></span></p>
+      <p>Contact: <a href="mailto:rex@burg.com">rex@burg.com</a></p>
     </footer>
   </body>
 </html>
