audience planning document

--- a/lesson3/audience.html
+++ b/lesson3/audience.html
@@ -34,6 +34,10 @@
           to the site looking for family programs and businesses they wish to
           visit for an extended period of time.
         </p>
+        <p>
+          Motivation: <br />This persona is looking for local businesses to
+          support and ways to be involved in the community.
+        </p>
       </li>
       <li class="persona_panel">
         <h3>Student</h3>
@@ -41,6 +45,10 @@
           This persona is in Rexburg attending BYUI as a full time student. They
           are generally single students looking to find bargans and other ways
           to save money.
+        </p>
+        <p>
+          Motivation: <br />This persona is looking for ways to save money and
+          cheap entertainment.
         </p>
       </li>
     </ol>
