--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -27,14 +27,19 @@
     </header>
     <h1>Design</h1>
     <div class="color_pallette">
-      <div class="box-1 boxes"><p>steelblue</p></div>
-      <div class="box-2 boxes"><p>lightsteelblue</p></div>
-      <div class="box-3 boxes"><p>black</p></div>
-      <div class="box-4 boxes"><p>white</p></div>
+      <div class="box-1 boxes"><p>steelblue: header and footer</p></div>
+      <div class="box-2 boxes">
+        <p>lightsteelblue: hover effect on nav bar</p>
+      </div>
+      <div class="box-3 boxes"><p>black: text on light colors</p></div>
+      <div class="box-4 boxes">
+        <p>white: background and text on dark colors.</p>
+      </div>
     </div>
     <h2>Font: Poppins</h2>
     <a href="https://fonts.google.com/specimen/Poppins?category=Sans+Serif"
       >Poppins Sans-Serif Google font</a
     >
+    <p>Will be applied to all headings and text elements.</p>
   </body>
 </html>
