discover page WIP

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
 
       <nav>
         <a href="./index.html" class="active">Home</a>
-        <a href="./audience.html">Target Audience</a>
+        <a href="./discover.html">Discover</a>
         <a href="./design.html">Design</a>
       </nav>
     </header>
