days since visit

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -124,6 +124,9 @@
       <a href="https://goo.gl/maps/f5VcGpbPFv3w4bsv8">Maps</a>
       <p>Last updated: <span id="lastmodified"></span></p>
       <p>Contact: <a href="mailto:rex@burg.com">rex@burg.com</a></p>
+      <p>
+        It has been <span id="last-visit"></span> days since your last visit
+      </p>
     </footer>
   </body>
 </html>
