--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,10 +50,22 @@
     </header>
     <main>
       <section class="panel" id="hero">
-        <img
-          src="https://images.pexels.com/photos/2649403/pexels-photo-2649403.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-          alt="lake with mountains behind"
-        />
+        <picture>
+          <source
+            srcset="./images/wdd230-org-400.jpg"
+            media="(max-width:400px)"
+          />
+          <source
+            srcset="./images/wdd230-org-800.jpg"
+            media="(max-width:800px)"
+          />
+          <source
+            srcset="./images/wdd230-org-1200.jpg"
+            media="(max-width:1200px)"
+          />
+          <img src="./images/wdd230-org-1200.jpg" alt="Hero image" />
+        </picture>
+
         <div class="call">
           <h1>Come visit Rexburg</h1>
           <button>Learn More</button>
