responsive images FINAL

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -24,7 +24,7 @@
       </div>
       <div class="header-box">
         <img
-          src="./images/RexCC-removebg-preview.png"
+          src="./images/Rex_chamber_logo-removebg-preview.webp"
           alt="Rexburg Icon"
           class="icon"
         />
@@ -42,8 +42,8 @@
         /></a>
       </div>
       <nav>
-        <a href="./index.html" class="active">Home</a>
-        <a href="./discover.html">Discover</a>
+        <a href="./index.html">Home</a>
+        <a href="./discover.html" class="active">Discover</a>
         <a href="./design.html">Design</a>
       </nav>
     </header>
@@ -125,7 +125,11 @@
       </section>
     </main>
     <footer>
-      <img src="./images/RexCC-removebg-preview.png" alt="logo" class="icon" />
+      <img
+        src="./images/Rex_chamber_logo-removebg-preview.webp"
+        alt="logo"
+        class="icon"
+      />
       <p>&copy; <span id="copyyear"></span> | Kevin Allred | Rexburg, ID|</p>
       <a href="https://goo.gl/maps/f5VcGpbPFv3w4bsv8">Maps</a>
       <p>Last updated: <span id="lastmodified"></span></p>
