--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,7 +44,7 @@
       <nav>
         <a href="./index.html">Home</a>
         <a href="./discover.html" class="active">Discover</a>
-        <a href="./design.html">Design</a>
+        <a href="./join.html">Join</a>
       </nav>
     </header>
     <main>
