--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Mock Home page for the Rexburg Chamber of Comerece by Kevin Allred for WDD230"
+      content="Mock join page for the Rexburg Chamber of Comerece by Kevin Allred for WDD230"
     />
-    <title>Rexburg Chamber of Comerece</title>
+    <title>Thank you!</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -39,59 +39,17 @@
       </div>
 
       <nav>
-        <a href="./index.html" class="active" >Home</a>
+        <a href="./index.html">Home</a>
         <a href="./discover.html">Discover</a>
-        <a href="./join.html" >Join</a>
+        <a href="./join.html">Join</a>
       </nav>
     </header>
     <main>
-      <section class="panel" id="hero">
-        </picture>
-
-        <div class="call">
-          <h1>Come visit Rexburg</h1>
-          <button>Learn More</button>
-        </div>
-      </section>
-      <section class="panel" id="event">
-        <h3>Events!</h3>
-        <p>
-          Here in Rexburg there is a variety of events and activities. Click
-          here to learn more!
-        </p>
-      </section>
-      <section class="panel" id="weather">
-        <h2>Weather</h2>
-        <div id="weather-temp"></div>
-      </section>
-      <section class="panel" id="news">
-        <h2>News:</h2>
-        <ul>
-          <li>Ribbon Cutting Ceremony!</li>
-          <li>New Library!</li>
-          <li>Car Theft Rampant!</li>
-          <li>Water Restrictions Increased</li>
-          <li>Puppet Becomes Real Boy!</li>
-        </ul>
-      </section>
-      <section class="panel" id="spotlight">
-        <div class="panel" id="water-tower">
-          <h3>Water Tower Celebrates 50th anniversary.</h3>
-        </div>
-        <div class="panel" id="night-lights">
-          <h3>Temple lights visible for miles.</h3>
-        </div>
-        <div class="panel" id="tabernacle">
-         
-          <h3>Tabernacle to host Choir.</h3>
-        </div>
-      </section>
-      <section id="join">
-        <div class="panel" id="join-panel">
-          <h3>Join the Chamber!</h3>
-          <button>Learn more</button>
-        </div>
-      </section>
+      <h1>Thank You!</h1>
+      <p>
+        Thank you for submitting your membership form. We appreciate your
+        interest and will be in touch soon.
+      </p>
     </main>
     <footer>
       <div class="icon"></div>
