--- a/chamber/responsive-images.html
+++ b/chamber/responsive-images.html
@@ -9,6 +9,8 @@
       content="Mock Home page for the Rexburg Chamber of Comerece by Kevin Allred for WDD230"
     />
     <title>Rexburg Chamber of Comerece</title>
+    <script defer src="./scripts/windchill.js"></script>
+    <script defer src="./scripts/site.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -149,5 +151,3 @@
     </footer>
   </body>
 </html>
-<script src="./scripts/windchill.js"></script>
-<script src="./scripts/site.js"></script>
