--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -45,6 +45,7 @@
         <a href="./index.html">Home</a>
         <a href="./discover.html" class="active">Discover</a>
         <a href="./join.html">Join</a>
+        <a href="./directory.html">Directory</a>
       </nav>
     </header>
     <main>
