--- a/chamber/join.html
+++ b/chamber/join.html
@@ -42,6 +42,7 @@
         <a href="./index.html">Home</a>
         <a href="./discover.html">Discover</a>
         <a href="./join.html" class="active">Join</a>
+        <a href="./directory.html">Directory</a>
       </nav>
     </header>
     <main>
