FINAL WEATHER API

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,7 +63,14 @@
       </section>
       <section class="panel" id="weather">
         <h2>Weather</h2>
-        <div id="weather-temp"></div>
+        <h2>Rexburg, ID</h2>
+        <h2>43.8231° N, 111.7924° W </h2>
+        <figure>
+          <img src="" alt="" id="weather-icon" />
+          <figcaption></figcaption>
+        </figure>
+        <p id="current-temp"></p>
+        
       </section>
       <section class="panel" id="news">
         <h2>News:</h2>
@@ -108,3 +115,4 @@
   </body>
 </html>
 <script src="./scripts/site.js"></script>
+<script src="./scripts/weatherApp.js"></script>
