--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,22 +39,20 @@
       </div>
 
       <nav>
-        <a href="./index.html" class="active" >Home</a>
+        <a href="./index.html" class="active">Home</a>
         <a href="./discover.html">Discover</a>
-        <a href="./join.html" >Join</a>
-        <a href="./directory.html" >Directory</a>
+        <a href="./join.html">Join</a>
+        <a href="./directory.html">Directory</a>
       </nav>
     </header>
     <main>
-      <section class="panel" id="hero">
-        </picture>
-
+      <section class="panel" id="hero" loading="lazy">
         <div class="call">
           <h1>Come visit Rexburg</h1>
           <button>Learn More</button>
         </div>
       </section>
-      <section class="panel" id="event">
+      <section class="panel" id="event" loading="lazy">
         <h3>Events!</h3>
         <p>
           Here in Rexburg there is a variety of events and activities. Click
@@ -64,13 +62,12 @@
       <section class="panel" id="weather">
         <h2>Weather</h2>
         <h2>Rexburg, ID</h2>
-        <h2>43.8231° N, 111.7924° W </h2>
+        <h2>43.8231° N, 111.7924° W</h2>
         <figure>
           <img src="" alt="" id="weather-icon" />
           <figcaption></figcaption>
         </figure>
         <p id="current-temp"></p>
-        
       </section>
       <section class="panel" id="news">
         <h2>News:</h2>
@@ -83,19 +80,18 @@
         </ul>
       </section>
       <section class="panel" id="spotlight">
-        <div class="panel" id="water-tower">
+        <div class="panel" id="water-tower" loading="lazy">
           <h3>Water Tower Celebrates 50th anniversary.</h3>
         </div>
-        <div class="panel" id="night-lights">
+        <div class="panel" id="night-lights" loading="lazy">
           <h3>Temple lights visible for miles.</h3>
         </div>
-        <div class="panel" id="tabernacle">
-         
+        <div class="panel" id="tabernacle" loading="lazy">
           <h3>Tabernacle to host Choir.</h3>
         </div>
       </section>
       <section id="join">
-        <div class="panel" id="join-panel">
+        <div class="panel" id="join-panel" loading="lazy">
           <h3>Join the Chamber!</h3>
           <button>Learn more</button>
         </div>
