add wind chill to weather

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,8 @@
           <img src="" alt="" id="weather-icon" />
           <figcaption></figcaption>
         </figure>
-        <p id="current-temp"></p>
+        <div id="current-temp"></div>
+        <div id="current-wind-chill"></div>
       </section>
       <section class="panel" id="news">
         <h2>News:</h2>
