--- a/bf2/index.html
+++ b/bf2/index.html
@@ -23,23 +23,30 @@
       <div class="logo"></div>
       <nav>
         <a href="./index.html">Home</a>
-        <a href="http://">About</a>
+        <a href="./about.html">About</a>
         <a href="./fresh.html">Drinks</a>
       </nav>
-      <button class="head-button">Order drink</button>
+      <a class="order-drink-button" href="./fresh.html">Order Drink</a>
       <h1 class="main-title">Bountiful Foods</h1>
     </header>
     <main>
       <section class="drink-templates">
         <div class="drink-one">
           <img src="./images/strawberry-drink.webp" alt="strawberry drink" />
-          <h2>Strawberry smoothie</h2>
-          <p>describe Strawberry smoothie</p>
+          <h2>Strawberry Smoothie</h2>
+          <p>
+            A refreshing and fruity blend of fresh strawberries, banana, and
+            orange juice, topped with whipped cream and a drizzle of honey.
+          </p>
         </div>
         <div class="drink-two">
           <img src="./images/mango-mamma.webp" alt="Mango Drink" />
           <h2>Mango Mamma</h2>
-          <p>describe Mango Mamma</p>
+          <p>
+            A tropical delight made with juicy mangoes, coconut milk, and a
+            splash of lime juice, garnished with fresh mint and a slice of
+            pineapple.
+          </p>
         </div>
       </section>
       <section class="custom-drink">
@@ -47,7 +54,9 @@
         <div>
           <h2>Choose your own adventure</h2>
           <p>why make your own drink</p>
-          <button>Create Custom Drink</button>
+          <a class="order-drink-button" href="./fresh.html"
+            >Create Custom Drink</a
+          >
         </div>
       </section>
       <section class="about-us">
