--- a/bf2/confirmation.html
+++ b/bf2/confirmation.html
@@ -24,14 +24,14 @@
       <div class="logo"></div>
       <nav>
         <a href="./index.html">Home</a>
-        <a href="http://">About</a>
+        <a href="./about.html">About</a>
         <a href="./fresh.html">Drinks</a>
       </nav>
-      <button class="head-button">Order drink</button>
+      <a class="order-drink-button" href="./fresh.html">Order Drink</a>
       <h1 class="main-title">Bountiful Foods</h1>
     </header>
     <main>
-      <h1>Order Confirmation</h1>
+      <h1>Order Confirmation:</h1>
 
       <table>
         <tr>
