--- a/bf2/confirmation.html
+++ b/bf2/confirmation.html
@@ -9,6 +9,12 @@
       content="The final project of Kevin Allred in wdd230 Winter'23. A mock website for bountiful foods, a locally sourced fruit smoothie company."
     />
     <title>Bountiful Foods</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&family=Farsan&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -21,7 +27,7 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <a href="./index.html"><div class="logo"></div></a>
       <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
@@ -31,7 +37,7 @@
       <h1 class="main-title">Bountiful Foods</h1>
     </header>
     <main>
-      <h1>Order Confirmation:</h1>
+      <h2>Order Confirmation:</h2>
 
       <table>
         <tr>
@@ -133,7 +139,7 @@
         rel="noopener noreferrer"
         ><img
           class="social-icon"
-          src="./images/2021 Twitter logo - black.png"
+          src="./images/2021-Twitter-logo-black.png"
           alt="Twitter"
       /></a>
     </footer>
