--- a/bf2/about.html
+++ b/bf2/about.html
@@ -29,9 +29,9 @@
     <header>
       <a href="./index.html"><div class="logo"></div></a>
       <nav>
-        <a href="./index.html">Home</a>
+        <!-- <a href="./index.html">Home</a> -->
         <a class="active" href="./about.html">About</a>
-        <a href="./fresh.html">Drinks</a>
+        <!-- <a href="./fresh.html">Drinks</a> -->
       </nav>
       <a class="order-drink-button" href="./fresh.html">Order Drink</a>
       <h1 class="main-title">Bountiful Foods</h1>
