--- a/bf2/index.html
+++ b/bf2/index.html
@@ -1,3 +1,11 @@
+<!-- To Do:
+-Table needs formatting
+-Form submit button needs styling as well as confirm order button 
+- Button in small size is too close to right side
+-In small view, weather is too close to right side of weather container
+-Some weird overflow happening in small view
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,9 +36,9 @@
     <header>
       <a href="./index.html"><div class="logo"></div></a>
       <nav>
-        <a class="active" href="./index.html">Home</a>
+        <!-- <a class="active" href="./index.html">Home</a> -->
         <a href="./about.html">About</a>
-        <a href="./fresh.html">Drinks</a>
+        <!-- <a href="./fresh.html">Drinks</a> -->
       </nav>
       <a class="order-drink-button" href="./fresh.html">Order Drink</a>
     </header>
@@ -44,7 +52,7 @@
         <a class="order-drink-button" href="./fresh.html">Order Drink</a>
       </div>
     </div>
-    <div class="down-arrow"><a href="#drink-template-section">V</a></div>
+    <div class="down-arrow"><a href="#drink-template-section">↓</a></div>
 
     <main>
       <section id="drink-template-section" class="drink-templates">
